(coded-sequence) Varint sequence